<resources>
    <string name="app_name">AmazighQuiz</string>
    <string name="Oefenen">Oefenen</string>
    <string name="Speel">Speel</string>
    <string name="Score">Score</string>
    <string name="Over">Over</string>
    <string name="learn_amazigh">Learn Amazigh!</string>
    <string name="image">image</string>
    <string name="option1">option1</string>
    <string name="option2">option2</string>
</resources>
