<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@id/layout">

    <View
        android:id="@+id/sideColor1"
        android:layout_width="10dp"
        android:layout_height="244dp"
        android:layout_alignParentBottom="true"
        android:background="#0099CC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <View
        android:id="@+id/sideColor2"
        android:layout_width="10dp"
        android:layout_height="244dp"
        android:layout_alignParentBottom="true"
        android:background="#99CC33"
        app:layout_constraintBottom_toTopOf="@+id/sideColor3"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/sideColor3"
        android:layout_width="10dp"
        android:layout_height="244dp"
        android:layout_alignParentBottom="true"
        android:background="#FFE513"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/learn_amazigh"
        android:textColor="#0099CC"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.309" />

    <Button
        android:id="@+id/over"
        android:onClick="configureOverActivity"
        android:layout_width="155dp"
        android:layout_height="155dp"
        android:backgroundTint="#CC2D2D"
        android:text="@string/Over"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.23"
        app:layout_constraintStart_toEndOf="@+id/score"
        app:layout_constraintTop_toBottomOf="@+id/speel"
        app:layout_constraintVertical_bias="0.144" />

    <Button
        android:id="@+id/speel"
        android:onClick="configureSpeelActivity"
        android:layout_width="155dp"
        android:layout_height="155dp"
        android:backgroundTint="#99CC33"
        android:text="@string/Speel"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.23"
        app:layout_constraintStart_toEndOf="@+id/oefenen"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.543"/>

    <Button
        android:id="@+id/oefenen"
        android:onClick="configureOefenActivity"
        android:layout_width="155dp"
        android:layout_height="155dp"
        android:backgroundTint="#0099CC"
        android:fontFamily="sans-serif-medium"
        android:text="@string/Oefenen"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.543" />

    <Button
        android:id="@+id/score"
        android:onClick="configureScoreActivity"
        android:layout_width="155dp"
        android:layout_height="155dp"
        android:backgroundTint="#FFE513"
        android:text="@string/Score"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/oefenen"
        app:layout_constraintVertical_bias="0.144" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="159dp"
        android:layout_height="111dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.186"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />
</androidx.constraintlayout.widget.ConstraintLayout>